--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SecuroServ</title>
+</head>
+<body>
+    <div id="startsida">
+        <input id="inputname" type="text" placeholder="Enter name here">
+        <input id="inputpass" type="text" placeholder="Enter password">
+        <button id="button1" onclick="DualPurposeLogin()">Log in</button>
+    </div>
 
+    <div id="login">
+
+    </div>
+</body>
+<script src="./script.js"></script>
+</html>
